27-06-24 Reporte de vales

--- a/Views/adAutorizarVales/adAutorizarVales.cshtml
+++ b/Views/adAutorizarVales/adAutorizarVales.cshtml
@@ -227,12 +227,12 @@
                             $("#FechaTXT").text("Fecha : " + vale.fechaGeneracion)
                             $("#DropDownListProyecto").data("kendoDropDownList").value(0)
                             $("#InputGalones").val("")
-                                $("#InputGalones").css("display", "block")
+                                /*$("#InputGalones").css("display", "block")
 
                                 $("#ContenedorTotalDinero").css("display", "block")
-                                $("#TXTTotalDinero").text("Ingrese la cantidad de dinero")
+                                $("#TXTTotalDinero").text("Ingrese la cantidad de dinero")*/
                             $("#InputTotalDinero").val("")
-                                $("#InputTotalDinero").css("display", "block")
+                                /*$("#InputTotalDinero").css("display", "block")
                             }*/
 
                             if (vale.tipoCargaValeCombustibleID === 2) {
