--- a/Views/adAutorizarVales/adAutorizarVales.cshtml
+++ b/Views/adAutorizarVales/adAutorizarVales.cshtml
@@ -29,6 +29,7 @@
                 <div class="col-lg-12">
                     <div id="GridVales">
                     </div>
+                    <span class="d-block d-lg-none mt-2 text-center">Presione doble click para autorizar un vale</span>
                 </div>
             </div>
         </div>
